Mon Jan 18 15:49:42 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/net/http.rb (Net::HTTPHeader#{content_range,range_length}):
	  use inclusive range same as the header representation.

Mon Jan 18 04:15:58 2010  Akinori MUSHA  <knu@iDaemons.org>

	* ext/digest/digest.c (rb_digest_instance_digest)
	  (rb_digest_instance_hexdigest): Save a method call of reset()
	  for a disposable clone.

	* ext/digest/digest.c (rb_digest_instance_hexdigest_bang): Fix
	  rdoc.

	* ext/digest/lib/digest.rb (Digest::Class.base64digest)
	  (Digest::Instance#base64digest{,!}): New methods.

Mon Jan 18 03:39:05 2010  Akinori MUSHA  <knu@iDaemons.org>

	* lib/base64.rb (Base64#{strict_encode64,strict_decode64,urlsafe_encode64,
	  urlsafe_decode64): New methods backported from 1.9.

Sun Jan 17 19:24:25 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* math.c (domain_check): check errno first.

Sat Jan 16 07:17:15 2010  NAKAMURA, Hiroshi  <nahi@ruby-lang.org>

	* ext/zlib/zlib.c: backport r18029 and r21861 from trunk.
	  * r18029 ext/zlib/zlib.c (rb_deflate_params): flush before
	    deflateParams. [ruby-core:17675] (by mame)
	  * r21861 ext/zlib/zlib.c (zstream_run): desperately guard the
	    variable.  [ruby-core:20576] (by usa)

	* test/zlib/test_zlib.rb: backport deflate tests from trunk.

Wed Jan 13 22:07:47 2010  NAKAMURA, Hiroshi  <nahi@ruby-lang.org>

	* test/zlib/test_zlib.rb: backport tests for 1.9

Wed Jan 13 06:54:44 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in: check for if struct timezone is defined.

	* missing.h (struct timezone): define if not defined.

	* win32/win32.h (struct timezone): defined in the newer w32api.
	  [ruby-core:27515]

Tue Jan 12 23:58:27 2010  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rss/maker/base.rb, test/rss/test_maker_0.9.rb:
	accept any time format in maker. [ruby-core:26923]

Tue Jan 12 12:49:39 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* misc/ruby-mode.el (ruby-here-doc-beg-match): fix for here-doc